--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -11,7 +11,7 @@
     "build:mac": "npm run build && electron-builder --mac",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
-    "dev": "electron-vite dev",
+    "electron:dev": "electron-vite dev",
     "electron:run": "electron .",
     "format": "prettier --write ",
     "postinstall": "electron-builder install-app-deps",
@@ -26,9 +26,9 @@
     "next-electron-rsc": "^0.2.3"
   },
   "devDependencies": {
-    "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
+    "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "electron": "^34.2.0",
     "electron-builder": "^25.1.8",
