--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal Electron application with TypeScript",
   "homepage": "https://electron-vite.org",
   "author": "example.com",
-  "main": "./out/main/index.js",
+  "main": "./dist/main/index.js",
   "scripts": {
     "build": "npm run typecheck && electron-vite build",
     "build:linux": "npm run build && electron-builder --linux",
